# wxwidgets_smith

./: .gitignore  CMakeLists.txt  README.md  widgets.cbp  widgetsApp.cpp  widgetsApp.h  widgetsMain.cpp  widgetsMain.h  wxwidgets_smith.cbp
wxsmith/: widgetsframe.wxs
